--- a/AIM/1.1_torch_basic.ipynb
+++ b/AIM/1.1_torch_basic.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [[1, 2], [3, 4]]\n",
-    "x_data = torch.tensor(data)"
+    "x_data = torch.tensor(data)\n",
+    "x_data"
    ]
   },
   {
@@ -76,12 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np_array = np.array(data)\n",
-    "x_np = torch.from_numpy(np_array)"
+    "x_np = torch.from_numpy(np_array)\n",
+    "x_np"
    ]
   },
   {
@@ -96,9 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ones Tensor: \n",
+      " tensor([[1, 1],\n",
+      "        [1, 1]]) \n",
+      "\n",
+      "Random Tensor: \n",
+      " tensor([[0.2364, 0.8810],\n",
+      "        [0.0753, 0.8664]]) \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "x_ones = torch.ones_like(x_data) # retains the properties of x_data\n",
     "print(f\"Ones Tensor: \\n {x_ones} \\n\")\n",
@@ -119,9 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Tensor: \n",
+      " tensor([[0.2328, 0.7383, 0.4842],\n",
+      "        [0.7138, 0.0769, 0.3295]]) \n",
+      "\n",
+      "Ones Tensor: \n",
+      " tensor([[1., 1., 1.],\n",
+      "        [1., 1., 1.]]) \n",
+      "\n",
+      "Zeros Tensor: \n",
+      " tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n"
+     ]
+    }
+   ],
    "source": [
     "shape = (2, 3,)\n",
     "rand_tensor = torch.rand(shape)\n",
@@ -142,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +210,7 @@
        "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,15 +236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of tensor: torch.Size([3, 4])\n",
+      "Datatype of tensor: torch.float32\n",
+      "Device tensor is stored on: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "tensor = torch.rand(3, 4)\n",
     "\n",
-    "print(f\"Shape of tensor: {tensor.shape}\")\n",
-    "print(f\"Datatype of tensor: {tensor.dtype}\")\n",
-    "print(f\"Device tensor is stored on: {tensor.device}\")"
+    "print(f\"Shape of tensor: {tensor.shape}\")  # 행렬의 크기를 알 수 있는 함수\n",
+    "print(f\"Datatype of tensor: {tensor.dtype}\")  # 데이터의 형태\n",
+    "print(f\"Device tensor is stored on: {tensor.device}\")  # "
    ]
   },
   {
@@ -214,9 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda not available\n"
+     ]
+    }
+   ],
    "source": [
     "# We move our tensor to the GPU if available\n",
     "if torch.cuda.is_available():\n",
@@ -243,9 +320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
    "source": [
     "tensor = torch.ones(4, 4)\n",
     "tensor[:,1] = 0\n",
@@ -264,11 +352,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]]) \n",
+      "\n",
+      "tensor([[1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
    "source": [
-    "t1 = torch.cat([tensor, tensor, tensor], dim=1)\n",
+    "print(f\"{tensor} \\n\")\n",
+    "\n",
+    "t1 = torch.cat([tensor, tensor, tensor], dim=1)  # 옆으로 이어 붙임\n",
     "print(t1)"
    ]
   },
@@ -281,9 +387,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor.mul(tensor) \n",
+      " tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]]) \n",
+      "\n",
+      "tensor * tensor \n",
+      " tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]])\n"
+     ]
+    }
+   ],
    "source": [
     "# This computes the element-wise product\n",
     "print(f\"tensor.mul(tensor) \\n {tensor.mul(tensor)} \\n\")\n",
@@ -300,9 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor.matmul(tensor.T) \n",
+      " tensor([[3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.]]) \n",
+      "\n",
+      "tensor @ tensor.T \n",
+      " tensor([[3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.]])\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"tensor.matmul(tensor.T) \\n {tensor.matmul(tensor.T)} \\n\")\n",
     "# Alternative syntax:\n",
@@ -322,9 +464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1.0528,  0.1861],\n",
+      "        [-1.0384, -0.0592],\n",
+      "        [ 1.1137, -1.6738]])\n",
+      "\n",
+      "tensor([[0., 1.],\n",
+      "        [0., 0.],\n",
+      "        [1., 0.]])\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(3, 2)\n",
     "print(x)\n",
@@ -341,9 +497,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 3],\n",
+      "        [4, 5, 6],\n",
+      "        [7, 8, 9]])\n",
+      "Size: torch.Size([3, 3])\n",
+      "Shape: torch.Size([3, 3])\n",
+      "랭크(차원): 2\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -356,9 +525,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[1, 2, 3],\n",
+      "         [4, 5, 6],\n",
+      "         [7, 8, 9]]])\n",
+      "Size: torch.Size([1, 3, 3])\n",
+      "Shape: torch.Size([1, 3, 3])\n",
+      "랭크(차원): 3\n"
+     ]
+    }
+   ],
    "source": [
     "# 랭크 늘리기\n",
     "x = x.unsqueeze(0)\n",
@@ -370,9 +552,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 3],\n",
+      "        [4, 5, 6],\n",
+      "        [7, 8, 9]])\n",
+      "Size: torch.Size([3, 3])\n",
+      "Shape: torch.Size([3, 3])\n",
+      "랭크(차원): 2\n"
+     ]
+    }
+   ],
    "source": [
     "# 랭크 줄이기\n",
     "x = x.squeeze(0)\n",
@@ -384,9 +579,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+      "Size: torch.Size([9])\n",
+      "Shape: torch.Size([9])\n",
+      "랭크(차원): 1\n"
+     ]
+    }
+   ],
    "source": [
     "# 랭크의 형태 바꾸기\n",
     "x = x.view(9)\n",
@@ -398,9 +604,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+      "        [1, 2, 3, 4, 5, 6, 7, 8, 9]])\n"
+     ]
+    }
+   ],
    "source": [
     "# 특정 차원을 대상으로 복사\n",
     "\n",
@@ -411,9 +626,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.],\n",
+      "        [1.]])\n",
+      "tensor([[1., 1.]])\n",
+      "\n",
+      "tensor([[2., 2.],\n",
+      "        [2., 2.]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Broadcasting\n",
     "\n",
@@ -435,9 +663,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(18.)\n",
+      "l을 w로 미분한 값은 18.0\n"
+     ]
+    }
+   ],
    "source": [
     "w = torch.tensor(1.0, requires_grad=True)\n",
     "\n",
@@ -472,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
