--- a/Data_science/KNN.ipynb
+++ b/Data_science/KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1c97fcfb210>"
+       "<matplotlib.collections.PathCollection at 0x79f12c1283b0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,8 +239,73 @@
     "        self.Y = Y\n",
     "\n",
     "    def predict(self, queries):\n",
-    "        "
+    "        Y = []\n",
+    "        for q in queries:\n",
+    "            dists = np.linalg.norm(self.X - q, axis=1)\n",
+    "            knns = np.argsort(dists)[:self.k]\n",
+    "            counts = np.bincount(self.Y[knns])\n",
+    "            Y.append(np.argmax(counts))\n",
+    "        \n",
+    "        return np.array(Y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train accuracy:  0.21666666666666667\n",
+      "test accuracy:  0.36666666666666664\n"
+     ]
+    }
+   ],
+   "source": [
+    "perm = np.random.permutation(len(X))\n",
+    "\n",
+    "Xrand = X[perm]\n",
+    "Yrand = Y[perm]\n",
+    "\n",
+    "n_trains = int(0.8*len(X))\n",
+    "X_train = Xrand[:n_trains]\n",
+    "Y_train = Yrand[:n_trains]\n",
+    "\n",
+    "X_test = Xrand[n_trains:]\n",
+    "Y_test = Yrand[n_trains:]\n",
+    "\n",
+    "knn = KNNClassifier(5)\n",
+    "knn.fit(X_train, Y_train)\n",
+    "\n",
+    "train_pred = knn.predict(X_train)\n",
+    "test_pred = knn.predict(X_test)\n",
+    "\n",
+    "print(\"train accuracy: \", (train_pred==Y_train).mean())\n",
+    "print(\"test accuracy: \", (test_pred == Y_test).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_val_score(knn, X, Y, cv):\n",
+    "    n = len(X)\n",
+    "    perm = np.random.permutation(n)\n",
+    "    X = X[perm]\n",
+    "    Y = Y[perm]\n",
+    "    scores = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -259,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
