--- a/Data_science/Decision_Trees.ipynb
+++ b/Data_science/Decision_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "Name: Age, Length: 891, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "np.float64(29.69911764705882)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "Name: Age, Length: 891, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "[891 rows x 7 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "np.float64(0.8271604938271605)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        " Text(0.9375, 0.125, 'gini = 0.204\\nsamples = 433\\nvalue = [383, 50]\\nclass = Died')]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,6 +879,7 @@
     "    def __init__(self, max_depth=3) -> None:\n",
     "        self.max_depth = max_depth\n",
     "        self.tree = None\n",
+    "\n",
     "\n",
     "    def fit(self, X, y):\n",
     "        self.tree = self.build_tree(X, y, self.max_depth)\n",
@@ -892,8 +893,101 @@
     "        gini = 1.0\n",
     "        for i in range(len(n_samples_per_class)):\n",
     "            gini -= (n_samples_per_class[i] / n_samples) ** 2\n",
-    "        return gini"
+    "\n",
+    "        return gini\n",
+    "    \n",
+    "    def find_best_split(self, X, y):\n",
+    "        n_samples, n_features = X.shape\n",
+    "        best_gini = 1.0\n",
+    "        best_feature = -1\n",
+    "        best_threshold = -1\n",
+    "\n",
+    "        for feature in range(n_features):\n",
+    "            thresholds = np.unique(X[:, feature])\n",
+    "\n",
+    "            for threshold in thresholds:\n",
+    "                left_indices = X[:, feature] < threshold\n",
+    "                right_indices = ~left_indices\n",
+    "\n",
+    "                left_gini = self.gini(y[left_indices])\n",
+    "                right_gini = self.gini(y[right_indices])\n",
+    "\n",
+    "                gini = (left_gini * np.sum(left_indices) + right_gini * np.sum(right_indices)) / n_samples\n",
+    "                \n",
+    "                if gini < best_gini:\n",
+    "                    best_gini = gini\n",
+    "                    best_feature = feature\n",
+    "                    best_threshold = threshold\n",
+    "\n",
+    "        return best_feature, best_threshold\n",
+    "    \n",
+    "    def build_tree(self, X, y, depth):\n",
+    "        if depth < 0:\n",
+    "            return None\n",
+    "        n_samples_per_class=np.bincount(y)\n",
+    "        node = Node(\n",
+    "            gini=self.gini(y),\n",
+    "            n_samples=len(y),\n",
+    "            n_samples_per_class=n_samples_per_class,\n",
+    "            predicted_class=np.argmax(n_samples_per_class)\n",
+    "            )\n",
+    "\n",
+    "        if node.gini == 0:\n",
+    "            return node\n",
+    "        \n",
+    "        best_feature, best_threshold = self.find_best_split(X, y)\n",
+    "\n",
+    "        node.feature_index = best_feature\n",
+    "        node.threshold = best_threshold\n",
+    "\n",
+    "        left_indices = X[:, best_feature] < best_threshold\n",
+    "        right_indices = ~left_indices\n",
+    "\n",
+    "        node.left = self.build_tree(X[left_indices], y[left_indices], depth - 1)\n",
+    "        node.right = self.build_tree(X[right_indices], y[right_indices], depth - 1)\n",
+    "\n",
+    "        return node\n",
+    "\n",
+    "    def predict_one(self, x):\n",
+    "        node = self.tree\n",
+    "        while node.left is not None:\n",
+    "            if x[node.feature_index] < node.threshold:\n",
+    "                node = node.left\n",
+    "            else:\n",
+    "                node = node.right\n",
+    "        return node.predicted_class"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.8271604938271605)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decision Tree 생성\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X.values, y.values)\n",
+    "# 예측 정확도 측정\n",
+    "(model.predict(X.values) == y.values).mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -912,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
