--- a/Data_science/Linear_Regression.ipynb
+++ b/Data_science/Linear_Regression.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +53,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W: \n",
+      " tensor([[0.4409],\n",
+      "        [0.7458]])\n",
+      "b: \n",
+      " tensor([[0.3829]])\n"
+     ]
+    }
+   ],
    "source": [
     "W = torch.rand(2, 1)\n",
     "b = torch.rand(1, 1)\n",
-    "lr = 0.01"
+    "lr = 0.01\n",
+    "\n",
+    "print(\"W: \\n\", W)\n",
+    "print(\"b: \\n\", b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 반복 횟수 설정정"
    ]
   },
   {
@@ -67,7 +89,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for epoch in range(3001):\n",
+    "    W.requires_grad_(True)\n",
+    "    b.requires_grad_(True)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -86,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
