--- a/Data_science/pytorch_practice.ipynb
+++ b/Data_science/pytorch_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
     "import torch\n",
     "\n",
     "x = torch.tensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
-    "y = torch.FloatTensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "y = torch.FloatTensor([[1, 2, 3], [4,1 5, 6], [7, 8, 9]])\n",
     "\n",
     "print(\"Datatype of x: \", x.dtype)\n",
     "print('x = \\n', x)\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,9 +79,9 @@
       "        [1, 1, 1]]) \n",
       "\n",
       "Random Tensor: \n",
-      " tensor([[0.8841, 0.7273, 0.5030],\n",
-      "        [0.5902, 0.3539, 0.3347],\n",
-      "        [0.1443, 0.3150, 0.3523]]) \n",
+      " tensor([[0.4456, 0.4388, 0.5862],\n",
+      "        [0.0375, 0.8112, 0.9529],\n",
+      "        [0.4861, 0.3275, 0.3846]]) \n",
       "\n"
      ]
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,8 @@
      "output_type": "stream",
      "text": [
       "Random Tensor: \n",
-      " tensor([[0.5437, 0.2796, 0.4858],\n",
-      "        [0.2648, 0.2567, 0.6508]]) \n",
+      " tensor([[0.1602, 0.7723, 0.0368],\n",
+      "        [0.0169, 0.1401, 0.7414]]) \n",
       "\n",
       "Ones Tensor: \n",
       " tensor([[1., 1., 1.],\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +236,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 산술 연산(Arithmetic operations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor: \n",
+      " tensor([[1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.],\n",
+      "        [1., 0., 1., 1.]])\n",
+      "y3: \n",
+      " tensor([[0.1311, 0.6703, 0.2884, 0.2544],\n",
+      "        [0.2936, 0.1606, 0.5219, 0.5183],\n",
+      "        [0.6530, 0.8574, 0.5490, 0.1536],\n",
+      "        [0.8774, 0.8437, 0.8889, 0.2286]])\n",
+      "tensor([[3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.],\n",
+      "        [3., 3., 3., 3.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"tensor: \\n\", tensor)\n",
+    "\n",
+    "y1 = tensor @ tensor.T\n",
+    "y2 = tensor.matmul(tensor.T)\n",
+    "\n",
+    "y3 = torch.rand_like(y1)\n",
+    "print(\"y3: \\n\", y3)\n",
+    "print(torch.matmul(tensor, tensor.T, out=y3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 1., 1.],\n",
+       "        [1., 0., 1., 1.],\n",
+       "        [1., 0., 1., 1.],\n",
+       "        [1., 0., 1., 1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# element wise product\n",
+    "z1= tensor * tensor\n",
+    "z2 = tensor.mul(tensor)\n",
+    "\n",
+    "z3 = torch.rand_like(tensor)\n",
+    "torch.mul(tensor, tensor, out=z3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -259,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
