--- a/Data_science/Linear_Regression.ipynb
+++ b/Data_science/Linear_Regression.ipynb
@@ -166,6 +166,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 3.]] [-4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "x = [[1,2], [3,2], [3,7], [1,1], [1,0]]\n",
+    "y = [[4], [8], [23], [1], [-2]]\n",
+    "\n",
+    "model = LinearRegression() # 모델 생성\n",
+    "model.fit(x, y)\n",
+    "\n",
+    "print(model.coef_, model.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[36.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.predict([[5, 10]]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
