--- a/Data_science/Decision Tree folder/Decision_Tree.ipynb
+++ b/Data_science/Decision Tree folder/Decision_Tree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -152,17 +152,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, gini, n_samples, n_samples_per_class, predicted_class) :\n",
-    "        self.gini = gini\n",
-    "        self.n_samples = n_samples\n",
-    "        self.n_samples_per_class = n_samples_per_class\n",
-    "        self.predicted_clss = predicted_class"
+    "\t\tdef __init__(self, gini, n_samples, n_samples_per_class, predicted_class):\n",
+    "\t\t\t\tself.gini = gini\n",
+    "\t\t\t\tself.n_samples = n_samples\n",
+    "\t\t\t\tself.n_samples_per_class = n_samples_per_class\n",
+    "\t\t\t\tself.predicted_class = predicted_class\n",
+    "\t\t\t\tself.feature_index = -1\n",
+    "\t\t\t\tself.threshold = -1\n",
+    "\t\t\t\tself.left = None\n",
+    "\t\t\t\tself.right = None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class DecisionTreeClassifier():\n",
+    "\t\tdef __init__(self, max_depth=3):\n",
+    "\t\t\t\tself.max_depth = max_depth\n",
+    "\t\t\t\tself.tree = None\n",
+    "\t\t\n",
+    "\t\tdef fit(self, X, y):\n",
+    "\t\t\t\tself.tree = self.build_tree(X, y, self.max_depth)\n",
+    "\t\t\n",
+    "\t\tdef gini(self, y):\n",
+    "\t\t\tn_samples = len(y)\n",
+    "\t\t\tn_sample_per_class = np.bincount(y)  # 0의 개수와 1의 개수가 array로 반환된다.\n",
+    "\n",
+    "\t\t\tgini = 1.0\n",
+    "\t\t\tfor i in range(len(n_sample_per_class)):\n",
+    "\t\t\t\tgini -= (n_sample_per_class[i] / n_samples)**2\n",
+    "\t\t\treturn gini\n",
+    "\t\t\n",
+    "\t\tdef find_best_split(self, X, y):\n",
+    "\t\t\tn_samples, n_features = X.shape  # 891, 5\n",
+    "\t\t\tbest_gini = 1.0\n",
+    "\t\t\tbest_feature = -1\n",
+    "\t\t\tbest_threshold = -1  # 임계값 \n",
+    "\n",
+    "\t\t\tfor feature in range(n_features):\n",
+    "\t\t\t\tthresholds = np.unique(X[:, feature])  # unique는 중복 제거 해주는 함수\n",
+    "\n",
+    "\t\t\t\tfor threshold in thresholds:\n",
+    "\t\t\t\t\tleft_indices = X[:, feature] < threshold\n",
+    "\t\t\t\t\tright_indices = ~left_indices\n",
+    "\n",
+    "\t\t\t\t\tleft_gini = self.gini(y[left_indices])\n",
+    "\t\t\t\t\tright_gini = self.gini(y[right_indices])\n",
+    "\n",
+    "\t\t\t\t\tgini = (left_gini * np.sum(left_indices) + right_gini * np.sum(right_indices)) / n_samples  # Weight Avg\n",
+    "\n",
+    "\t\t\t\t\tif gini < best_gini:\n",
+    "\t\t\t\t\t\tbest_gini = gini\n",
+    "\t\t\t\t\t\tbest_feature = feature\n",
+    "\t\t\t\t\t\tbest_threshold = threshold\n",
+    "\t\t\t\n",
+    "\t\t\treturn best_feature, best_threshold\n",
+    "\t\t\n",
+    "\t\tdef build_tree(self, X, y, depth):\n",
+    "\t\t\tif depth < 0:\n",
+    "\t\t\t\treturn None\n",
+    "\t\t\t\n",
+    "\t\t\tn_samples_per_class = np.bincount(y)\n",
+    "\n",
+    "\t\t\tnode = Node(\n",
+    "\t\t\t\tgini=self.gini,\n",
+    "\t\t\t\tn_samples=len(y),\n",
+    "\t\t\t\tn_samples_per_class=n_samples_per_class,\n",
+    "\t\t\t\tpredicted_class=np.argmax(n_samples_per_class)  # 전체 배열에서 가장 높은 값을 가진 요소의 인덱스 배열을 반환\n",
+    "\t\t\t\t)\n",
+    "\t\t\t\n",
+    "\t\t\tif node.gini == 0:\n",
+    "\t\t\t\treturn node\n",
+    "\t\t\t\n",
+    "\t\t\tbest_feature, best_threshold = self.find_best_split(X, y)\n",
+    "\n",
+    "\t\t\tnode.feature_index = best_feature\n",
+    "\t\t\tnode.threshold = best_threshold\n",
+    "\n",
+    "\t\t\tleft_indices = X[:, best_feature] < best_threshold\n",
+    "\t\t\tright_indices = ~left_indices\n",
+    "\n",
+    "\t\t\tnode.left = self.build_tree(X[left_indices], y[left_indices], depth-1)\n",
+    "\t\t\tnode.right = self.build_tree(X[right_indices], y[right_indices], depth-1)\n",
+    "\n",
+    "\t\t\treturn node\n",
+    "\t\t\n",
+    "\t\tdef predict(self, X):\n",
+    "\t\t\treturn np.array([self.predict_one(x) for x in X])\n",
+    "\t\t\n",
+    "\t\tdef predict_one(self, x):\n",
+    "\t\t\tnode = self.tree\n",
+    "\n",
+    "\t\t\twhile node.left is not None:\n",
+    "\t\t\t\tif x[node.feature_index] < node.threshold:\n",
+    "\t\t\t\t\tnode = node.left\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tnode = node.right\n",
+    "\t\t\t\n",
+    "\t\t\treturn node.predicted_class\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.8271604938271605)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X.values, y.values)\n",
+    "\n",
+    "(model.predict(X.values) == y.values).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.          1.         22.          7.25        1.        ]\n",
+      " [ 1.          1.         38.         71.2833      0.        ]\n",
+      " [ 3.          0.         26.          7.925       0.        ]\n",
+      " ...\n",
+      " [ 3.          1.         29.69911765 23.45        0.        ]\n",
+      " [ 1.          0.         26.         30.          1.        ]\n",
+      " [ 3.          0.         32.          7.75        1.        ]]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.values)\n",
+    "print(type(X.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1])\n",
+    "print(type(np.bincount(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
