--- a/Data_science/Decision Tree folder/Decision_Trees.ipynb
+++ b/Data_science/Decision Tree folder/Decision_Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "Name: Age, Length: 891, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "np.float64(29.69911764705882)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "Name: Age, Length: 891, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "[891 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "np.float64(0.8271604938271605)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        " Text(0.9375, 0.125, 'gini = 0.204\\nsamples = 433\\nvalue = [383, 50]\\nclass = Died')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "np.float64(0.8271604938271605)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,20 +813,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv(\"test.csv\")\n",
-    "test['Age'] = test['Age'].fillna(age_mean)\n",
+    "# test = pd.read_csv(\"test.csv\")\n",
+    "# test['Age'] = test['Age'].fillna(age_mean)\n",
     "\n",
-    "X_test = test[featrues]\n",
-    "X_test = pd.get_dummies(X_test)\n",
+    "# X_test = test[featrues]\n",
+    "# X_test = pd.get_dummies(X_test)\n",
     "\n",
-    "predictions = model.predict(X_test.values)\n",
+    "# predictions = model.predict(X_test.values)\n",
     "\n",
-    "output = pd.DataFrame({'PassengerId': test['PassengerId'], 'Survived': predictions})\n",
-    "output.to_csv('submission.csv', index=False)\n"
+    "# output = pd.DataFrame({'PassengerId': test['PassengerId'], 'Survived': predictions})\n",
+    "# output.to_csv('submission.csv', index=False)\n"
    ]
   },
   {
